--- a/ZaolisService/app.config
+++ b/ZaolisService/app.config
@@ -1,48 +1,59 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-        <section name="entityFramework"
-          type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-          requirePermission="false"/>
-    </configSections>
+	<configSections>
+		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+		<section name="entityFramework"
+		type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+		requirePermission="false"/>
+	</configSections>
 
-  <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
-  </appSettings>
-  <system.web>
-    <compilation debug="true"/>
-  </system.web>
-  <!-- When deploying the service library project, the content of the config file must be added to the host's 
-  app.config file. System.Configuration does not support config files for libraries. -->
-  <system.serviceModel>
-	  <behaviors>
-		  <serviceBehaviors>
-			  <behavior name="mex">
-				  <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-				  <serviceDebug includeExceptionDetailInFaults="false"/>
-			  </behavior>
-		  </serviceBehaviors>
-	  </behaviors>
-	  <services>
-		  <service name="ZaolisService.ZaolisService" behaviorConfiguration="mex">
-			  <endpoint address="" binding="wsDualHttpBinding" contract="ZaolisService.IZaolisService">
-			  </endpoint>
-			  <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
-			  <host>
-				  <baseAddresses>
-					  <add baseAddress="http://localhost:8301/ZaolisService.svc"/>
-					  <!--<add baseAddress="net.tcp://localhost:8302" />-->
-				  </baseAddresses>
-			  </host>
-		  </service>
-	  </services>
-  </system.serviceModel>
-  <entityFramework>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
-    </providers>
-  </entityFramework>
+	<appSettings>
+		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
+	</appSettings>
+	<system.web>
+		<compilation debug="true"/>
+	</system.web>
+	<!-- When deploying the service library project, the content of the config file must be added to the host's
+app.config file. System.Configuration does not support config files for libraries. -->
+	<system.serviceModel>
+		<bindings>
+			<netTcpBinding>
+				<binding
+				name="netTcpBinding" closeTimeout="00:01:00"
+				maxReceivedMessageSize="70000000"
+				maxBufferPoolSize="70000000"
+				maxBufferSize="70000000"/>
+			</netTcpBinding>
+		</bindings>
+		<behaviors>
+			<serviceBehaviors>
+				<behavior name="mex">
+					<serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+					<serviceDebug includeExceptionDetailInFaults="false"/>
+				</behavior>
+			</serviceBehaviors>
+		</behaviors>
+		<services>
+			<service name="ZaolisService.ZaolisService" behaviorConfiguration="mex">
+				<endpoint address="" binding="wsDualHttpBinding" contract="ZaolisService.IZaolisService">
+				</endpoint>
+				<endpoint address="tcp" binding="netTcpBinding" contract="ZaolisService.IZaolisService" bindingConfiguration="netTcpBinding">
+				</endpoint>
+				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+				<host>
+					<baseAddresses>
+						<add baseAddress="http://localhost:8099/ZaolisService.svc"/>
+						<add baseAddress="net.tcp://localhost:8090/ZaolisService.svc"/>
+					</baseAddresses>
+				</host>
+			</service>
+		</services>
+	</system.serviceModel>
+	<entityFramework>
+		<providers>
+			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+		</providers>
+	</entityFramework>
 	<connectionStrings>
 		<add name="zaolis" connectionString="data source=den1.mssql7.gear.host;initial catalog=zaolisdatabase;User Id=zaolisdatabase;Password=Yn1tUy!b_mFK;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
