--- a/ZaolisUI/App.config
+++ b/ZaolisUI/App.config
@@ -1,44 +1,50 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-        <section name="entityFramework"
+	<configSections>
+		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+		<section name="entityFramework"
           type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
           requirePermission="false"/>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
-    </startup>
-    <entityFramework>
-        <providers>
-            <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
-        </providers>
-    </entityFramework>
+	</configSections>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+	</startup>
+	<entityFramework>
+		<providers>
+			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+		</providers>
+	</entityFramework>
 	<connectionStrings>
 		<add name="zaolis" connectionString="data source=den1.mssql7.gear.host;initial catalog=zaolisdatabase;User Id=zaolisdatabase;Password=Yn1tUy!b_mFK;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
- <system.serviceModel>
-  <bindings>
+	<system.serviceModel>
+		<bindings>
+   <netTcpBinding>
+    <binding name="NetTcpBinding_IZaolisService">
+     <security>
+      <transport sslProtocols="None" />
+     </security>
+    </binding>
+   </netTcpBinding>
    <wsDualHttpBinding>
     <binding name="WSDualHttpBinding_IZaolisService" />
-    <binding name="WSDualHttpBinding_IZaolisService1" />
    </wsDualHttpBinding>
   </bindings>
-  <client>
-   <endpoint address="http://localhost:8301/ZaolisService.svc" binding="wsDualHttpBinding"
-    bindingConfiguration="WSDualHttpBinding_IZaolisService" contract="ServiceReference1.IZaolisService"
+		<client>
+   <endpoint address="http://localhost:8099/ZaolisService.svc" binding="wsDualHttpBinding"
+    bindingConfiguration="WSDualHttpBinding_IZaolisService" contract="ZaolisServiceClient.IZaolisService"
     name="WSDualHttpBinding_IZaolisService">
     <identity>
      <userPrincipalName value="VITALIKOLEKS\VitalikOlekS" />
     </identity>
    </endpoint>
-   <endpoint address="http://localhost:8301/ZaolisService.svc" binding="wsDualHttpBinding"
-    bindingConfiguration="WSDualHttpBinding_IZaolisService1" contract="ZaolisServiceClient.IZaolisService"
-    name="WSDualHttpBinding_IZaolisService1">
+   <endpoint address="net.tcp://localhost:8090/ZaolisService.svc/tcp"
+    binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IZaolisService"
+    contract="ZaolisServiceClient.IZaolisService" name="NetTcpBinding_IZaolisService">
     <identity>
      <userPrincipalName value="VITALIKOLEKS\VitalikOlekS" />
     </identity>
    </endpoint>
   </client>
- </system.serviceModel>
+	</system.serviceModel>
 </configuration>
