--- a/ZaolisUI/ZaolisUI.csproj
+++ b/ZaolisUI/ZaolisUI.csproj
@@ -255,6 +255,9 @@
   <ItemGroup>
     <Resource Include="Resources\z.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Main_UI\z %281%29.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
