--- a/ZaolisUI/App.config
+++ b/ZaolisUI/App.config
@@ -35,14 +35,14 @@
     bindingConfiguration="WSDualHttpBinding_IZaolisService" contract="ZaolisServiceClient.IZaolisService"
     name="WSDualHttpBinding_IZaolisService">
     <identity>
-     <userPrincipalName value="VITALIKOLEKS\VitalikOlekS" />
+     <userPrincipalName value="DESKTOP-LM85BNA\Mikola" />
     </identity>
    </endpoint>
    <endpoint address="net.tcp://localhost:8090/ZaolisService.svc/tcp"
     binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IZaolisService"
     contract="ZaolisServiceClient.IZaolisService" name="NetTcpBinding_IZaolisService">
     <identity>
-     <userPrincipalName value="VITALIKOLEKS\VitalikOlekS" />
+     <userPrincipalName value="DESKTOP-LM85BNA\Mikola" />
     </identity>
    </endpoint>
   </client>
